--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="app"></div>
-	<script type="module" src="./src/webapp.ts"></script>
+	<script type="module" src="./src/demo/webapp.ts"></script>
 
 	<noscript>
 		JavaScript is required
