--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 			background: #444;
 			color: #bbb
 		}
+
+		a {
+			color: blanchedalmond;
+		}
+
+		hr {
+			border: 1px solid #666;
+		}
 	</style>
 </head>
 <body>
@@ -43,8 +51,10 @@
 	</h3>
 
 	<h3>
-		Github repo: <a href="https://github.com/SolarRepublic/wasm-secp256k1"></a>
+		Github repo: <a href="https://github.com/SolarRepublic/wasm-secp256k1">https://github.com/SolarRepublic/wasm-secp256k1</a>
 	</h3>
+
+	<br>
 
 	<table>
 		<tr>
@@ -118,6 +128,13 @@
 		</tr>
 	</table>
 
+	<br>
+	<hr>
+	<br>
+
+	<footer>
+		Created by Blake Regalia.
+	</footer>
 </body>
 </html>
 
