--- a/index.html
+++ b/index.html
@@ -79,6 +79,26 @@
 
 		<tr>
 			<td>
+				<label for="pkr">Recovered:</label>
+			</td>
+			<td>
+				<input type="text" size="68" id="pkr" name="pkr" readonly>
+			</td>
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+				<label for="v">Recovery ID:</label>
+			</td>
+			<td>
+				<input type="text" size="2" id="v" name="v" readonly>
+			</td>
+			</td>
+		</tr>
+
+		<tr>
+			<td>
 				<label for="msg">Message:</label>
 			</td>
 			<td>
